--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kalipsco/liri-node-app#readme",
   "dependencies": {
     "eslint": "^4.3.0",
+    "file-system": "^2.2.2",
     "node-spotify-api": "^1.0.6",
     "request": "^2.81.0",
     "spotify": "^0.3.0",
